unpackaged/main/default/objects/AccountContactRelation/fields/Acknowledgments__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgments</label>
    <type>Checkbox</type>
</CustomField>