unpackaged/main/default/objects/AccountContactRelation/fields/Annual_Report_Verification__c.field-meta.xml
<CustomField>
    <fullName>Annual_Report_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Report Verification</label>
    <type>Checkbox</type>
</CustomField>