unpackaged/main/default/objects/AccountContactRelation/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Events</label>
    <type>Checkbox</type>
</CustomField>