unpackaged/main/default/objects/AccountContactRelation/fields/Grants__c.field-meta.xml
<CustomField>
    <fullName>Grants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grants</label>
    <type>Checkbox</type>
</CustomField>