unpackaged/main/default/objects/AccountContactRelation/fields/Internal_Mailings__c.field-meta.xml
<CustomField>
    <fullName>Internal_Mailings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Mailings</label>
    <type>Checkbox</type>
</CustomField>