unpackaged/main/default/objects/AccountContactRelation/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payments</label>
    <type>Checkbox</type>
</CustomField>