unpackaged/main/default/objects/AccountContactRelation/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the primary affiliation for the Contact? (e.g. primary employer) -- this does not make the Contact the Primary Contact for the Org record.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>