unpackaged/main/default/objects/AccountContactRelation/fields/X18_Char_ID_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_ID_Affiliation__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Char ID Affiliation</label>
    <type>Text</type>
</CustomField>